# pdf-to-markdown-alpha

./: .gitignore  CLAUDE.md  README.md  compose.yml  pyproject.toml
src/: __init__.py  __main__.py  converter.py
stubs/: fitz.pyi  markdownify.pyi
